--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
     <style name="MyDialog" parent="@android:style/Theme.Light.NoTitleBar">
         <!-- 是否有边框 -->
         <item name="android:windowFrame">@null</item>
@@ -21,6 +22,7 @@
         <!-- 点外边可以消失  -->
         <!--<item name="android:windowCloseOnTouchOutside">true</item>-->
     </style>
+
     <style name="CustomDialog" type="text/css">
         <item name="android:windowEnterAnimation">@anim/slide_out_left</item>
         <item name="android:windowExitAnimation">@anim/slide_out_right</item>
@@ -39,4 +41,22 @@
         <attr name="mn_barWidth" format="dimension" />
         <attr name="mn_linearProgress" format="boolean" />
     </declare-styleable>
+
+    <style name="CustomAppTheme_textinputLayout" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorAccent">#3498db</item>
+        <item name="android:textColorHint">#1e1e1e</item>
+        <item name="colorControlNormal">#1e1e1e</item>
+        <item name="colorControlActivated">#3498db</item>
+        <item name="colorControlHighlight">#3498db</item>
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
